Bug 309324 - No error message when ItemCreateJob or ItemModifyJob fails
Summary: No error message when ItemCreateJob or ItemModifyJob fails
Status: RESOLVED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.9
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-10-31 15:29 UTC by Daniel Vrátil
Modified: 2013-02-28 18:52 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Daniel Vrátil 2012-10-31 15:29:20 UTC
There is a bug in the Google Contacts Akonadi resource that contacts with "&" anywhere are not saved to Google. The Akonadi resource emits cancelTask() error, however there is no error message in KAddressbook that would inform user that something is wrong and his changes were not saved.


Reproducible: Always

Steps to Reproduce:
1. Somehow force an Akonadi resource to emit cancelTask()

Actual Results:  
No visual feedback in KAddressbook, the changes are actually still displayed to user in the preview pane.

Expected Results:  
An error dialog, possibly with buttons like "OK" and "Try Again". "OK" should also revert the changes.
Comment 1 Laurent Montel 2013-02-28 18:52:36 UTC
Git commit 7d55d2cd76b988e4967e8c44fd5a343057e66d7c by Montel Laurent.
Committed on 28/02/2013 at 19:51.
Pushed by mlaurent into branch 'master'.

Fix Bug 309324 - No error message when ItemCreateJob or ItemModifyJob fails

FIXED-IN: 4.11

M  +1    -1    CMakeLists.txt
M  +50   -0    akonadi/contact/contacteditor.cpp
M  +17   -5    akonadi/contact/contacteditor.h
M  +15   -3    akonadi/contact/contacteditordialog.cpp
M  +11   -0    akonadi/contact/contacteditordialog.h
M  +7    -0    akonadi/contact/standardcontactactionmanager.cpp
M  +1    -0    akonadi/contact/standardcontactactionmanager.h

http://commits.kde.org/kdepimlibs/7d55d2cd76b988e4967e8c44fd5a343057e66d7c