Fix Bug 309324 - No error message when ItemCreateJob or ItemModifyJob fails

FIXED-IN: 4.11
BUG: 309324